FullQa New/src/objects/Referrer__c.object
<CustomObject>
    <description>Use by NextBee (Vendor) as a fully integrated summary object of rewards portal activities</description>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipName>Referrers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CaseSafeID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rewards User CaseSafeID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Domain__c</fullName>
        <formula>IF(ISBLANK(Email__c),&quot;--__--&quot;,

RIGHT(Email__c,LEN(Email__c)-FIND(&quot;@&quot;,Email__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Domain</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L1_Date__c</fullName>
        <label>L1 Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>L2_Date__c</fullName>
        <label>L2 Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>L3_Date__c</fullName>
        <label>L3 Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Account__c</fullName>
        <formula>Partner_Contact__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Referrers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Number__c</fullName>
        <formula>Partner_Contact__r.Account.PartnerNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Postal__c</fullName>
        <label>Postal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>(Deprecated) Rewards User</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Rewards_Users</fullName>
        <columns>OBJECT_ID</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Partner_Account__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2016 12:00 AM</value>
        </filters>
        <label>Rewards Users</label>
    </listViews>
    <nameField>
        <label>Referrer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rewards Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>